<resources>
    <string name="google_maps_api_key">AIzaSyDH4EllWhYVhff2lzFoa8BIt-2hzfRsZSc</string>
    <string name="app_name">MoodTracker</string>
    <string name="title_home">Home</string>
    <string name="title_dashboard">Dashboard</string>
    <string name="title_notifications">Notifications</string>
    <string name="addEntryBtn">Add Event</string>
    <string name="editEntryBtn">Edit Event</string>
    <string name="deleteEntryBtn">Delete Event</string>
    <string name="editMood">Edit your mood....</string>
    <string name="cancel">Cancel</string>
    <string name="moodEventIntro">How are you feeling? </string>
    <string name="feelingTV">I am feeling </string>
    <string name="reasonET">thoughts?</string>
    <string name="reasonET2">(reason)</string>
    <string name="because">because </string>
    <string name="socialStateTV">Are you by yourself?</string>

    <string name="imageTV">Upload Image</string>
    <string name="uploadDP">Upload Profile Photo</string>
    <string name="locationTV">Use Location</string>
    <string name="save_edit">SAVE</string>
    <string name="cancel_edit">CANCEL</string>

    <string name="posts">Posts</string>
    <string name="following">Following</string>
    <string name="followers">Folllowers</string>

    <string-array name="feelings">
        <item></item>
        <item>happy</item>
        <item>excited</item>
        <item>hopeful</item>
        <item>satisfied</item>
        <item>sad</item>
        <item>angry</item>
        <item>frustrated</item>
        <item>confused</item>
        <item>annoyed</item>
        <item>hopeless</item>
        <item>lonely</item>
    </string-array>

    <string-array name="socialStates">
        <item></item>
        <item>alone</item>
        <item>with one person</item>
        <item>with two or more people</item>
        <item>with a crowd</item>
    </string-array>

    <!-- TODO: Remove or change this placeholder text -->
    <string name="hello_blank_fragment">Hello blank fragment</string>

</resources>
