<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="300dp" android:layout_height="300dp" android:layout_gravity="center" android:background="#d1d9ff">

    <TextView
        android:id="@+id/moodEventIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="#9fa8da"
        android:padding="5dp"
        android:text="@string/moodEventIntro"
        android:textAppearance="@style/TextAppearance.AppCompat.Large" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feelingTV"
        android:text="@string/feelingTV"
        android:textSize="17sp"
        android:layout_below="@id/moodEventIntro"
        android:padding="5dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feelingSpinner"
        android:entries="@array/feelings"
        android:layout_below="@id/moodEventIntro"
        android:layout_toRightOf="@id/feelingTV"
        android:layout_margin="5dp"/>

    <EditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reasonET"
        android:hint="@string/reasonET"
        android:layout_below="@id/feelingTV"
        android:layout_alignParentRight="true"
        android:layout_margin="5dp"
        android:maxLength="20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/socialStateTV"
        android:text="@string/socialStateTV"
        android:textSize="17sp"
        android:layout_below="@id/reasonET"
        android:padding="5dp"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/socialStateSpinner"
        android:entries="@array/socialStates"
        android:layout_below="@id/reasonET"
        android:layout_toRightOf="@id/socialStateTV"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addMoodEvent"
        android:text="@string/addEntryBtn"
        android:background="@drawable/roundbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#9fa8da"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clearMoodEvent"
        android:text="@string/cancel"
        android:background="@drawable/roundbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="#9fa8da"/>

</RelativeLayout>