<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="400dp"
    android:layout_gravity="center_vertical"
    android:background="@color/appBackground">

    <TextView
        android:id="@+id/moodEventIntro"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@color/appBackgroundAccent"
        android:padding="5dp"
        android:text="@string/moodEventIntro"
        android:textStyle="bold"
        android:textAppearance="@style/TextAppearance.AppCompat.Large"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feelingTV"
        android:text="@string/feelingTV"
        android:textSize="17sp"
        android:layout_below="@id/moodEventIntro"
        android:padding="5dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/white"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feelingSpinner"
        android:layout_below="@id/moodEventIntro"
        android:layout_toRightOf="@id/feelingTV"
        android:layout_margin="5dp" />

    <androidx.emoji.widget.EmojiEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reasonET"
        android:textColor="@color/white"
        android:hint="@string/reasonET"
        android:textColorHint="@color/white"
        android:layout_below="@id/feelingTV"
        android:layout_alignParentRight="true"
        android:layout_marginTop="5dp"
        android:layout_marginBottom="5dp"
        android:layout_marginLeft="20dp"
        android:layout_marginRight="20dp"
        android:maxLength="20"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/socialStateTV"
        android:text="@string/socialStateTV"
        android:textSize="17sp"
        android:layout_below="@id/reasonET"
        android:padding="5dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/white"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/socialStateSpinner"
        android:layout_below="@id/reasonET"
        android:layout_toRightOf="@id/socialStateTV"
        android:layout_margin="5dp"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/clearMoodEvent"
        android:text="@string/cancel"
        android:background="@drawable/roundbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentLeft="true"
        android:layout_marginLeft="16dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/appBackgroundAccent"
        android:textColor="@color/white"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/addMoodEvent"
        android:text="@string/addEntryBtn"
        android:background="@drawable/roundbutton"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"
        android:layout_marginRight="16dp"
        android:layout_marginBottom="10dp"
        android:backgroundTint="@color/appBackgroundAccent"
        android:textColor="@color/white"/>

    <CheckBox
        android:id="@+id/enableMap"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/socialStateTV"
        android:layout_margin="16dp"
        android:layout_marginLeft="12dp"
        android:text="Tag Location"
        android:textColor="@color/white" />

    <TextView
        android:id="@+id/imageTV"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/socialStateTV"
        android:layout_alignParentRight="true"
        android:layout_marginRight="20dp"
        android:layout_marginTop="20dp"
        android:background="@color/appBackgroundAccent"
        android:padding="5dp"
        android:text="@string/imageTV"
        android:textColor="@color/white"
        android:textSize="17sp" />

</RelativeLayout>