<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".EditMoodEvent"
    android:background="@color/black">

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editMoodTitle"
        android:layout_marginStart="16dp"
        android:layout_marginTop="16dp"
        android:layout_marginEnd="16dp"
        android:layout_marginBottom="16dp"
        android:text="@string/editMood"
        android:textAppearance="@style/TextAppearance.AppCompat.Display1"
        android:textStyle="bold"
        android:textColor="@color/white"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="X"
        android:textSize="20sp"
        android:textColor="@color/white"
        android:layout_alignParentRight="true"
        android:layout_marginTop="26dp"
        android:layout_marginRight="30dp"
        android:onClick="cancel"/>

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/feelingTV2"
        android:layout_below="@id/editMoodTitle"
        android:text="@string/feelingTV"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:textColor="@color/white"
        android:textSize="20sp"/>

    <Spinner
        android:id="@+id/editMoodFeelingSpinner"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_below="@id/editMoodTitle"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="5dp"
        android:layout_toRightOf="@id/feelingTV2" />

    <TextView
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/reasonTV2"
        android:text="@string/because"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:textSize="20sp"
        android:layout_below="@id/feelingTV2"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="16dp"
        android:layout_marginRight="16dp"/>

    <androidx.emoji.widget.EmojiEditText
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:id="@+id/reasonET2"
        android:hint="@string/reasonET2"
        android:textColor="@color/white"
        android:textColorHint="@color/white"
        android:layout_below="@id/feelingTV2"
        android:layout_toRightOf="@id/reasonTV2"
        android:layout_marginTop="8dp"
        android:layout_marginBottom="8dp"
        android:layout_marginRight="16dp"
        android:maxLength="20"/>

    <Spinner
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/socialStateSpinner2"
        android:layout_below="@id/reasonTV2"
        android:layout_margin="16dp"/>

    <CheckBox
        android:id="@+id/locationCB2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:layout_margin="16dp"
        android:layout_alignParentRight="true"
        android:layout_below="@id/socialStateSpinner2" />

    <TextView
        android:id="@+id/locationTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/locationTV"
        android:textSize="17sp"
        android:textColor="@color/white"
        android:textStyle="italic"
        android:layout_marginTop="18dp"
        android:layout_toLeftOf="@id/locationCB2"
        android:layout_below="@id/socialStateSpinner2"/>

    <TextView
        android:id="@+id/imageTV2"
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:text="@string/imageTV"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:padding="5dp"
        android:background="@color/appBackgroundAccent"
        android:layout_margin="16dp"
        android:layout_below="@id/socialStateSpinner2"
        android:onClick="editMoodImage"/>

    <ImageView
        android:id="@+id/moodImage"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="16dp"
        android:layout_marginLeft="50dp"
        android:layout_marginRight="50dp"
        android:layout_centerHorizontal="true"
        android:layout_below="@id/locationCB2"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/deleteEntryBtn"
        android:text="@string/deleteEntryBtn"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/white"
        android:layout_margin="16dp"
        android:onClick="deleteMood"
        android:layout_alignParentBottom="true"/>

    <Button
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:id="@+id/editEntryBtn"
        android:text="@string/editEntryBtn"
        android:layout_margin="16dp"
        android:layout_gravity="right"
        android:background="@drawable/roundbutton"
        android:backgroundTint="@color/white"
        android:onClick="editMoodEvent"
        android:layout_alignParentBottom="true"
        android:layout_alignParentRight="true"/>


</RelativeLayout>